feat: add namaste codesystem endpoint
